Release Notes for Cppcheck 2.18

New checks:
-

Improved checking:
-

GUI:
-

Changed interface:
-

Deprecations:
- Support for building with Qt 5 will be removed in Cppcheck 2.19.
-

Other:
- Updated Qt to 6.8.2 (official Windows release only).
-